keyboarddir = $(pkgdatadir)/keyboards
dist_keyboard_DATA =				\
	us.xml					\
	th.xml					\
	jp-kana.xml				\
	$(inscript_keyboards)
inscript_keyboards =				\
	as-inscript.xml				\
	bn-inscript.xml				\
	gu-inscript.xml				\
	hi-inscript.xml				\
	kn-inscript.xml				\
	ks-inscript.xml				\
	mai-inscript.xml			\
	ml-inscript.xml				\
	mr-inscript.xml				\
	or-inscript.xml				\
	pa-inscript.xml				\
	sd-inscript.xml				\
	ta-inscript.xml				\
	te-inscript.xml
