keyboardsdir = $(pkgdatadir)/keyboards

nobase_dist_keyboards_DATA =			\
	keyboards.xml				\
	geometry/compact.xml			\
	symbols/ar.xml				\
	symbols/be.xml				\
	symbols/fa.xml				\
	symbols/he.xml				\
	symbols/ja-kana.xml			\
	symbols/kk.xml				\
	symbols/ks.xml				\
	symbols/my.xml				\
	symbols/ru.xml				\
	symbols/th.xml				\
	symbols/ua.xml				\
	symbols/ug.xml				\
	symbols/us.xml				\
	symbols/zh-bopomofo.xml			\
	$(inscript_symbols)			\
	$(NULL)

inscript_symbols =				\
	symbols/as-inscript.xml			\
	symbols/bn-inscript.xml			\
	symbols/gu-inscript.xml			\
	symbols/hi-inscript.xml			\
	symbols/kn-inscript.xml			\
	symbols/ks-inscript.xml			\
	symbols/mai-inscript.xml		\
	symbols/ml-inscript.xml			\
	symbols/mr-inscript.xml			\
	symbols/or-inscript.xml			\
	symbols/pa-inscript.xml			\
	symbols/sd-inscript.xml			\
	symbols/ta-inscript.xml			\
	symbols/te-inscript.xml			\
	$(NULL)

-include $(top_srcdir)/git.mk
